Update spring app cmd